fix problem with header z-index

--- a/Fotomatic/resources/css/style.css
+++ b/Fotomatic/resources/css/style.css
@@ -41,7 +41,7 @@ html {
 
 header {
   position: fixed;
-  z-index: 100%;
+  z-index: 100;
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
